# kundo_movies

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
docs/: instructions.md
public/: main.py
public/static/css/: styles.css
public/templates/: index.html
src/kundo_movies/: main.py  test.py  utils.py
src/kundo_movies/routers/: details.py  search.py
src/kundo_movies/static/js/: script.js
tests/: test_details.py  test_utils.py
